--- a/src/main/resources/templates/fragments/navigation.html
+++ b/src/main/resources/templates/fragments/navigation.html
@@ -60,7 +60,7 @@
             </ul>
 
             <ul class="login-cart" role="list">
-                <li><a href="#"><i class="fa-solid fa-user-large"></i></a></li>
+                <li> <a th:href="@{/users/login}"><i class="fa-solid fa-user-large"></i></a></li>
                 <li><a href="#"><i class="fa-solid fa-cart-shopping"></i></a></li>
             </ul>
 
