--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,9 +4,10 @@ xmnls="http://www.w3.org/1999/html">
 
 
 <head th:replace="fragments/head"> </head>
-
+<title>Index</title>
 <body>
 <head th:replace="fragments/navigation"> </head>
+
 
 </body>
 
